# social-minus-media

./: .env  .envrc  .gitignore  Cargo.toml  README.md  flake.nix  justfile
.sqlx/: query-00f913fb5e627c46ec65507ea91e152adb22b8bebba5cb1a5c00211e16e82b93.json  query-16a7d4fb47f5ef996526cbcc2c1b25ff7d8f895a315d33ca1cbbd6f8e1235335.json  query-1adca0c2b5577ba92fb6501c1b57bf055922cbcfb13b38ca5c06338ba4755d46.json  query-20ffb2495ad61529a23ea969e32590a836ea260e7da057b5a79729b61a668e93.json  query-33cefe94005daaf9c451fde88434516b5fd56244c1921df122665397d23598df.json  query-3bc9f4870f05a580bd5894d8aaf46427441024b9644acdf45eed731cd2f0c390.json  query-6515f036f1e27e4b3bd402442defdd5fb0da3d46bf32825577083e0c350884bb.json  query-7ca89754a135661a895a6cee40fb33715403cafc51877eee8ca6708f32e391e9.json  query-7f3718f53a615e608536f7300e5da941084aa6641ab368a7f4b84276ef5b384f.json  query-984f43651559635322c42a17ee4ea69e829b624e4326c95be480abe7b0f276a7.json  query-994df3e8e64c6db65f4bcc9c4ca75bec5db7d274e0c150771c7ca29b4ec08bb8.json  query-a3faebd5d017b19f7b504393b37d51e98e9a06c5c8c6229604737eb6199807ec.json  query-ab8397013024cc88c938db002d0b3eeb4ca57dc97c17d7ae72ba81c75507785e.json  query-b144217c1232c447f33be14dc00dd1a0e76a648e80b832677201f97d11e8a165.json  query-b56fc0294104135bb2312c318834c509aa8edb27cdcefee95cc4aa4cb5ddf377.json  query-c0bed17ced661c568a24bb2d70e3c50a715ac014c5af1192e4d4d96d319d7234.json  query-c0df1d23089f9be661bc5f755318ddcf0bb99eaf590b937c2c225ba2aba30bc6.json  query-c234ce5c4c5c7e0e999f17fc8b258ba62a0b794e9c4ae14af8674ec968099d2c.json  query-c6b0efe986a1157197137b37b9e8e1f55f6a7fe53409c72cf391171bfddcfb3b.json  query-ef3516779fcd85eed59876f3aa1ac51b576fab3df1484e00b694fbcdd8ce1ac8.json  query-f0f3d71bccca1655e2f479bc216fb62a74b8d40ce15974cd3020bc5c13c506d4.json  query-f29948a551d0d96cbd72ba07642f91214902415d50f70be05bf87453a2876917.json
api/: Cargo.toml
api/src/: error.rs  lib.rs  router.rs  state.rs
api/src/extractors/: auth.rs  user.rs
api/src/handlers/: analysis.rs  billing.rs  event.rs  mod.rs  product.rs  simple.rs  user.rs  user_interests.rs
config/: default.toml
domain/: Cargo.toml
domain/src/: error.rs  lib.rs  ports.rs
domain/src/analysis/: grading.rs  mod.rs
domain/src/event/: crud.rs  mod.rs
domain/src/product/: crud.rs  mod.rs
domain/src/rsvp/: mod.rs
domain/src/test_utils/: fake_ai_service.rs  fake_product_repository.rs  fake_token_validator.rs  fake_user_profile_repository.rs  mod.rs
domain/src/user/: crud.rs  mod.rs
domain/src/user_interests/: crud.rs  mod.rs
frontend/gatheroundme/: next.config.mjs  package-lock.json  package.json
frontend/gatheroundme/src/app/: globals.css  layout.js  manifest.js  page.js  page.module.css
frontend/gatheroundme/src/app/activities/: activities.module.css  page.js
frontend/gatheroundme/src/app/alignment/: alignment.module.css  page.js
frontend/gatheroundme/src/app/profile/: page.js  profile.module.css
frontend/gatheroundme/src/app/signup/: page.js  signup.module.css
infra/: Cargo.toml
infra/src/: entitlment.rs  http.rs  interests.rs  lib.rs  llm.rs
infra/src/ai/: genai_service.rs  llm.rs
infra/src/auth/: jwt_validator.rs
infra/src/mail/: mod.rs
infra/src/postgres/: event_repo.rs  mod.rs  product_repo.rs  rsvp_repo.rs  user_interests_repo.rs  user_repo.rs
infra/src/sqlite/: mod.rs  product_repo.rs  user_repo.rs
infra/src/stripe/: mod.rs
migrations/: 20240101000000_create_user_profiles.sql
server/: Cargo.toml  build.rs
server/src/: main.rs
server/src/config/: app.rs  database.rs  entitlment.rs  llm.rs  mod.rs  resend.rs  server.rs  stripe.rs  zitadel.rs
