[workspace]
members = [
    "domain",
    "infra",
    "api",
    "server",
]
resolver = "2"

[workspace.dependencies]
# Internal crates
domain  = { path = "domain" }
infra   = { path = "infra" }
api     = { path = "api" }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Web
axum        = { version = "0.8", features = ["macros"] }
axum-extra  = { version = "0.12", features = ["typed-header"] }
tower-http  = { version = "0.6", features = ["trace", "timeout", "fs", "cors", "compression-full", "decompression-full"] }
headers     = "0.4"
reqwest     = { version = "0.13", features = ["json", "form"] }

# Database
sqlx     = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "time", "uuid", "macros"] }
pgvector = { version = "0.4", features = ["sqlx"] }

# Serialization
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

# Types & Utilities
uuid            = { version = "1", features = ["v7", "serde"] }
time            = { version = "0.3", features = ["serde-well-known"] }
thiserror       = "2"
anyhow          = "1"
bon             = "3"
trait-variant   = "0.1"
nutype          = { version = "0.6", features = ["serde"] }
derive_more     = { version = "2", features = ["full"] }
rand            = "0.10"
hmac            = "0.12"
sha2            = "0.10"
hex             = "0.4"
subtle          = "2"
secrecy         = { version = "0.10", features = ["serde"] }
schemars        = "1"

# Auth
jsonwebtoken = { version = "10", default-features = false, features = ["aws_lc_rs"] }

# Email
resend-rs = "0.21"

# Observability
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["env-filter"] }
tracing-appender    = "0.2"
console-subscriber  = "0.5"

# Config & CLI
clap    = { version = "4", features = ["derive", "env"] }
config  = { version = "0.15", default-features = false, features = ["toml"] }

[profile.release-debug]
inherits = "release"
debug = true
split-debuginfo = "off"
