[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
domain      = { workspace = true }
uuid        = { workspace = true }
time        = { workspace = true }
serde       = { workspace = true }
serde_json  = { workspace = true }
axum        = { workspace = true }
axum-extra  = { workspace = true }
tower-http  = { workspace = true }
headers     = { workspace = true }
tokio       = { workspace = true }
tracing     = { workspace = true }
derive_more = { workspace = true }

[dev-dependencies]
domain  = { workspace = true, features = ["test-utils"] }
tokio   = { workspace = true }
