[package]
name = "domain"
version = "0.1.0"
edition = "2024"

[features]
test-utils  = []

[dependencies]
uuid            = { workspace = true }
time            = { workspace = true }
serde           = { workspace = true }
serde_json      = { workspace = true }
schemars        = { workspace = true }
thiserror       = { workspace = true }
anyhow          = { workspace = true }
trait-variant   = { workspace = true }
derive_more     = { workspace = true }
nutype          = { workspace = true }
sqlx            = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true }
