[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
domain              = { workspace = true }
infra               = { workspace = true }
api                 = { workspace = true }
tokio               = { workspace = true }
axum                = { workspace = true }
serde               = { workspace = true }
tracing             = { workspace = true }
tracing-subscriber  = { workspace = true }
tracing-appender    = { workspace = true }
console-subscriber  = { workspace = true, optional = true }
clap                = { workspace = true }
config              = { workspace = true }
anyhow              = { workspace = true }
secrecy             = { workspace = true }

[features]
tokio-console = ["console-subscriber", "tokio/tracing"]
fake-ai = ["domain/test-utils"]
